# site-v4

./: .dockerignore  .env.dist  .gitignore  .pre-commit-config.yaml  Dockerfile  Procfile.tailwind  README.md  compose.dev.yaml  compose.prod.yaml  compose.template.yaml  docker-entrypoint.sh  manage.py  pyproject.toml  requirements.minimal.txt  requirements.txt
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy_to_ghcr.yml  dev-approval.yml  manual_dev_approval.yml
assets/: style.css
commande/: admin.py  apps.py  forms.py  helloasso.py  models.py  tasks.py  tokens.py  urls.py  utils.py  views.py  widgets.py
commande/migrations/: 0001_initial.py  0002_utilisateur_password.py  0003_utilisateur_last_login_alter_utilisateur_mail.py  0004_alter_utilisateur_managers.py  0005_alter_utilisateur_options_and_more.py  0006_utilisateur_username_alter_utilisateur_email.py  0007_alter_utilisateur_created_at_and_more.py  0008_categorieproduit_produit.py  0009_produit_image_produit_isquota.py  0010_alter_produit_isquota_alter_produit_quota_commande.py  0011_remove_commande_produit_commande_produit.py  0012_livraison_alter_commande_date.py  0013_alter_livraison_produit.py  0014_commande_chambre.py  0015_remove_commande_produit_alter_livraison_produit_and_more.py  0016_alter_commande_client.py  0017_alter_commande_date.py  0018_alter_commande_date.py  0019_alter_utilisateur_credit_alter_utilisateur_email.py  0020_alter_utilisateur_credit.py  0021_produit_prix_achat.py  0022_alter_livraison_date.py  0023_utilisateur_getordermail.py  0024_alter_commande_total_commande_alter_produit_prix_and_more.py  0025_alter_utilisateur_options_and_more.py  0026_alter_utilisateur_chambre_and_more.py  0027_utilisateur_autorisation_verified_and_more.py  0028_alter_utilisateur_islivreur_and_more.py  0029_alter_utilisateur_last_order.py  0030_alter_utilisateur_created_at_and_more.py  0031_alter_utilisateur_email_verified_and_more.py  0032_grande_migration.py  0033_alter_productcategory_options.py  0034_alter_product_image.py  0035_alter_transaction_type_helloassocheckout_and_more.py  0036_alter_user_phone_alter_user_room.py
commande/static/: style.css
commande/static/css/: unfold_dev.css
commande/static/externe/css/: jquery-ui.min.css
commande/static/favicon/: site.webmanifest
commande/static/js/: range-picker-bind.js
commande/templates/admin/: bulk_create_deliveries.html  modification.html  precreate_user.html  precreate_users.html  solde.html  tableur.html
commande/templates/commande/: base.html  contact.html  contact_cards.html  finish_signup.html  historique.html  livreur.html  login.html  main.html  mentions.html  messages.html  order.html  password_change.html  password_change_complete.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  recharge.html  recharge_lyf.html  signup.html  update.html  verify_user.html
commande/templates/mail/: base_mail.html  order_mail.html  password_reset_mail.html  password_reset_subject.txt  precreation_mail.html  signup_mail.html  verify_account_mail.html  verify_email_mail.html
commande/templates/widgets/: multi_date_picker.html  range_date_picker.html
commande/utils/: context_processors.py  helloasso.py  tokens.py  utils.py  widgets.py
docker/: Dockerfile  Dockerfile.dev  compose.dev.yaml  compose.prod.yaml  docker-entrypoint.sh
docs/: DocumentationTechnique.md
documentation/: DocumentationTechnique.md
paingouin/: asgi.py  celery.py  settings.docker.py  settings.prod.py  settings.py  settings.template.py  urls.py  wsgi.py
templates/admin_original/: base.html  base_site.html  change_form.html
templates/django_yubin/: message_detail.html
templates/unfold/helpers/: account_links.html  navigation_user.html
theme/static_src/: package-lock.json  package.json  tailwind.config.js
theme/static_src/src/: styles.css
theme/templates/: base.html
