# ==== mypy ====
[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "paingouin.settings"

# ==== djLint ====
[tool.djlint]
blank_line_after_tag = "load,extends"
close_void_tags = false
format_css = true
format_js = true
ignore="H030,H031"
indent=2
max_line_length = 120
profile = "django"
custom_html="mjml,mj-\\w+"
custom_blocks="component"
extend_exclude="templates/admin_original,templates/unfold,templates/django_yubin"

[tool.djlint.css]
indent_size = 2

[tool.djlint.js]
indent_size = 2
templating = "django"

# ==== ruff ====
[tool.ruff]
# Exclude a variety of commonly ignored directories.
extend-exclude = [
    "*/migrations/*.py",
    "staticfiles/*",
]

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "C90",
    "I",
    "N",
    "UP",
    "YTT",
    # "ANN", # flake8-annotations: we should support this in the future but 100+ errors atm
    "ASYNC",
    "S",
    "BLE",
    "FBT",
    "B",
    "A",
    "COM",
    "C4",
    "DTZ",
    "T10",
    "DJ",
    "EM",
    "EXE",
    "FA",
    "ISC",
    "ICN",
    "G",
    "INP",
    "PIE",
    "T20",
    "PYI",
    "PT",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SLOT",
    "SIM",
    "TID",
    "TC",
    "INT",
    # "ARG", # Unused function argument
    "PTH",
    "ERA",
    "PD",
    "PGH",
    "PL",
    "TRY",
    "FLY",
    # "NPY",
    # "AIR",
    "PERF",
    # "FURB",
    # "LOG",
    "RUF",
]
ignore = [
    "S101", # Use of assert detected https://docs.astral.sh/ruff/rules/assert/
    "RUF012", # Mutable class attributes should be annotated with `typing.ClassVar`
    "COM812", # https://docs.astral.sh/ruff/rules/missing-trailing-comma/#formatter-compatibility
]

[tool.ruff.lint.pycodestyle]
max-line-length = 120

[project]
name = "site-v4"
version = "4.0.0"
description = "Version 4 du site de l'association de vente de pain Pain'Gouin, utilisant le framework Django."
readme = "README.md"
license = { text = "Not open source" }
authors = [
  { name = "Valentin GRÉGOIRE", email = "gregoire.valentin@gmail.com" },
  { name = "Mathis RIMBERT", email = "mathis.rimbert@centrale.centralelille.fr" },
]
requires-python = "==3.13.*"
dependencies = [
    "authlib>=1.6.7",
    "celery>=5.6.2",
    "django==5.2.*",
    "django-crispy-forms>=2.5",
    "django-environ>=0.13.0",
    "django-imagekit>=6.0.0",
    "django-import-export[ods,xlsx]>=4.4.0",
    "django-mjml-template>=1.0.0",
    "django-tailwind>=4.4.2",
    "django-unfold>=0.79.0",
    "django-widget-tweaks>=1.5.1",
    "django-yubin>=2.0.6",
    "gunicorn>=25.0.3",
    "helloasso-python>=1.0.8",
    "html2text>=2025.4.15",
    "mysqlclient>=2.2.8",
    "requests>=2.32.5",
    "whitenoise>=6.11.0",
]

[dependency-groups]
dev = [
    "django-browser-reload>=1.21.0",
    "django-stubs[compatible-mypy]>=5.2.9",
    "django-watchfiles>=1.4.0",
    "djlint>=1.36.4",
    "honcho>=2.0.0",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "ruff>=0.15.2",
]
